@@ -34,27 +34,28 @@ const char* type_name(zeek::TypeTag t)
 		"bool",      // 1
 		"int",       // 2
 		"count",     // 3
-		"double",    // 4
-		"time",      // 5
-		"interval",  // 6
-		"string",    // 7
-		"pattern",   // 8
-		"enum",      // 9
-		"timer",     // 10
-		"port",      // 11
-		"addr",      // 12
-		"subnet",    // 13
-		"any",       // 14
-		"table",     // 15
-		"union",     // 16
-		"record",    // 17
-		"types",     // 18
-		"func",      // 19
-		"file",      // 20
-		"vector",    // 21
-		"opaque",    // 22
-		"type",      // 23
-		"error",     // 24
+		"counter",   // 4
+		"double",    // 5
+		"time",      // 6
+		"interval",  // 7
+		"string",    // 8
+		"pattern",   // 9
+		"enum",      // 10
+		"timer",     // 11
+		"port",      // 12
+		"addr",      // 13
+		"subnet",    // 14
+		"any",       // 16
+		"table",     // 16
+		"union",     // 17
+		"record",    // 18
+		"types",     // 19
+		"func",      // 20
+		"file",      // 21
+		"vector",    // 22
+		"opaque",    // 23
+		"type",      // 24
+		"error",     // 25
 	};
 
 	if ( int(t) >= NUM_TYPES )
