@@ -1,18 +1,18 @@
 1st stuff
 hrw, 0, zeek/cluster/node/proxy-1/
-hrw (custom pool), 0, zeek/cluster/node/proxy-2/
+hrw (custom pool), 0, zeek/cluster/node/proxy-1/
 hrw, 1, zeek/cluster/node/proxy-1/
-hrw (custom pool), 1, zeek/cluster/node/proxy-2/
+hrw (custom pool), 1, zeek/cluster/node/proxy-1/
 hrw, 2, zeek/cluster/node/proxy-1/
 hrw (custom pool), 2, zeek/cluster/node/proxy-1/
 hrw, 3, zeek/cluster/node/proxy-1/
-hrw (custom pool), 3, zeek/cluster/node/proxy-2/
+hrw (custom pool), 3, zeek/cluster/node/proxy-1/
 hrw, 13, zeek/cluster/node/proxy-1/
 hrw (custom pool), 13, zeek/cluster/node/proxy-2/
 hrw, 37, zeek/cluster/node/proxy-1/
 hrw (custom pool), 37, zeek/cluster/node/proxy-2/
 hrw, 42, zeek/cluster/node/proxy-1/
-hrw (custom pool), 42, zeek/cluster/node/proxy-1/
+hrw (custom pool), 42, zeek/cluster/node/proxy-2/
 hrw, 101, zeek/cluster/node/proxy-1/
 hrw (custom pool), 101, zeek/cluster/node/proxy-2/
 rr, zeek/cluster/node/proxy-1/
@@ -32,19 +32,19 @@ rr (custom pool), zeek/cluster/node/proxy-1/
 rr, zeek/cluster/node/proxy-1/
 rr (custom pool), zeek/cluster/node/proxy-2/
 hrw, 0, zeek/cluster/node/proxy-1/
-hrw (custom pool), 0, zeek/cluster/node/proxy-2/
+hrw (custom pool), 0, zeek/cluster/node/proxy-1/
 hrw, 1, zeek/cluster/node/proxy-1/
-hrw (custom pool), 1, zeek/cluster/node/proxy-2/
+hrw (custom pool), 1, zeek/cluster/node/proxy-1/
 hrw, 2, zeek/cluster/node/proxy-1/
 hrw (custom pool), 2, zeek/cluster/node/proxy-1/
 hrw, 3, zeek/cluster/node/proxy-1/
-hrw (custom pool), 3, zeek/cluster/node/proxy-2/
+hrw (custom pool), 3, zeek/cluster/node/proxy-1/
 hrw, 13, zeek/cluster/node/proxy-1/
 hrw (custom pool), 13, zeek/cluster/node/proxy-2/
 hrw, 37, zeek/cluster/node/proxy-1/
 hrw (custom pool), 37, zeek/cluster/node/proxy-2/
 hrw, 42, zeek/cluster/node/proxy-1/
-hrw (custom pool), 42, zeek/cluster/node/proxy-1/
+hrw (custom pool), 42, zeek/cluster/node/proxy-2/
 hrw, 101, zeek/cluster/node/proxy-1/
 hrw (custom pool), 101, zeek/cluster/node/proxy-2/
 2nd stuff
