@@ -1,8 +1,6 @@
-got distributed event hrw, 0
-got distributed event hrw, 1
-got distributed event hrw, 3
 got distributed event hrw, 13
 got distributed event hrw, 37
+got distributed event hrw, 42
 got distributed event hrw, 101
 got distributed event rr, 1
 got distributed event rr, 3
