@@ -8,33 +8,33 @@ T
 F
 [id=0, user_data=alice]
 [id=3, user_data=dave]
-[id=4, user_data=eve]
-[id=4, user_data=eve]
+[id=3, user_data=dave]
+[id=0, user_data=alice]
+[id=0, user_data=alice]
 [id=4, user_data=eve]
 [id=0, user_data=alice]
-[id=3, user_data=dave]
 [id=1, user_data=bob]
 [id=0, user_data=alice]
-[id=1, user_data=bob]
-T
-[id=4, user_data=eve]
-[id=3, user_data=dave]
-[id=4, user_data=eve]
-[id=4, user_data=eve]
-[id=4, user_data=eve]
-[id=4, user_data=eve]
-[id=3, user_data=dave]
-[id=1, user_data=bob]
-[id=4, user_data=eve]
 [id=1, user_data=bob]
 T
-[id=0, user_data=alice]
+[id=3, user_data=dave]
+[id=3, user_data=dave]
 [id=3, user_data=dave]
 [id=4, user_data=eve]
 [id=4, user_data=eve]
 [id=4, user_data=eve]
+[id=3, user_data=dave]
+[id=1, user_data=bob]
+[id=4, user_data=eve]
+[id=1, user_data=bob]
+T
 [id=0, user_data=alice]
 [id=3, user_data=dave]
+[id=3, user_data=dave]
+[id=0, user_data=alice]
+[id=0, user_data=alice]
+[id=4, user_data=eve]
+[id=0, user_data=alice]
 [id=1, user_data=bob]
 [id=0, user_data=alice]
 [id=1, user_data=bob]
